# rusbview

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build-release.yml  pull-request.yml
scripts/: derive-version.mjs  derive-version.sh
src/: App.tsx  gui.rs  history.rs  index.css  lib.rs  main.rs  main.tsx  usb.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: history.rs  i18n.rs  lib.rs  logging.rs  main.rs  monitor.rs  usb.rs
src-tauri/tests/: history.rs  i18n.rs  logging.rs  usb.rs
src-tauri/tests/common/: mod.rs
src/components/: DetailPane.tsx  SettingsPage.tsx  Toolbar.tsx  TreeSidebar.tsx
src/lib/: i18n.ts  types.ts  usb.ts
src/locales/en/: translation.json
src/locales/zh-CN/: translation.json
