[package]
name = "rusbview"
version = "0.1.0"
edition = "2021"
description = "A GPUI desktop viewer for USB topology, descriptors, and hotplug history."
license = "MIT OR Apache-2.0"
repository = "https://github.com/halfsweet/rusbview"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
cyme = { version = "2.3", default-features = false, features = ["watch"] }
directories = "6"
futures-lite = "2"
gpui = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"
